--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,46 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 :root {
+    --first-color: hsl(240, 55%, 64%);
+    --second-color: hsl(302, 96%, 60%);
+    --three-color: hsla(221, 90%, 88%, 0.549);
+    --five-color: hsl(214, 47%, 15%);
     --white-color: #ffffff;
 }
+
 body {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     width: 100%;
-      background-image: linear-gradient(
-          to right bottom, 
-          #118ab2, 
-          #0e92b9, 
-          #0b99c1, 
-          #07a1c8,
-          #03a9cf, 
-          #37b0d8,
-          #51b8e1, 
-          #66bfe9, 
-          #8cc7f2, 
-          #accff8,
-          #c7d8fc, 
-          #dee2ff
-    );
+    background-image: linear-gradient( to right bottom, hsl(240, 55%, 64%), hsl(302, 96%, 60%));
 }
+
 .container {
     max-width: 1200px;
     margin: auto;
     padding: 0 1rem;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 300;
     color: var(--white-color);
     margin: 1rem 0 1rem 0;
 }
+
 .heading {
     font-size: 32px;
 }
+
+
 /* end common style */
 
 #home .container {
@@ -47,47 +49,56 @@ h1, h2, h3, h4, h5, h6 {
     align-items: flex-start;
     flex-direction: row;
 }
+
 .collection {
     width: 50%;
     flex: 1;
     margin-top: 1.5rem;
 }
+
 .lead {
     max-width: 600px;
     font-weight: 400;
-    color: #15253a;
+    color: var(--five-color);
     letter-spacing: 0.5px;
     line-height: 1.2rem;
 }
+
 .musicbox {
     margin-top: 1rem;
 }
-.musicbox ul li h3{
-    color: #15253a;
+
+.musicbox ul li h3 {
+    color: var(--five-color);
     font-weight: 400;
 }
+
 .hor {
     margin: 1rem 0 1rem 0;
     max-width: 500px;
     background-color: #c7d8fc;
 }
+
 .playbox {
     flex: 1;
     margin: 0.5rem auto;
     text-align: center;
     border-radius: 8px;
-    background-color: #c7d8fc8c;
+    background-color: var(--three-color);
 }
+
 nav {
     display: block;
     margin: 3rem auto;
 }
-ul li{
+
+ul li {
     list-style: none;
     display: inline;
     margin: 1rem;
     padding: 1rem;
 }
+
 ul li a {
     text-decoration: none;
     padding: 8px 15px;
@@ -95,15 +106,18 @@ ul li a {
     color: var(--white-color);
     transition: all 300ms;
 }
+
 ul li a:hover {
-    background-color: #c7d8fc8c;
+    background-color: var(--three-color);
 }
+
 .controller {
     margin: 2.5rem auto;
     width: 100%;
-    max-width: 400px;
-    min-height: 500px;
+    max-width: 300px;
+    min-height: 400px;
 }
+
 .circle {
     width: 250px;
     height: 250px;
@@ -111,23 +125,23 @@ ul li a:hover {
     border-radius: 50%;
     margin: 2rem auto;
     display: flex;
-    border: 3px solid #37b0d8;
-    border-top: 3px solid #0254ec;
-   
+    border: 5px solid #b237d8;
+    border-top: 3px solid #5d0374;
 }
+
 .circle2 {
     width: 180px;
     height: 180px;
     background-color: #252629;
     border-radius: 50%;
     border: 3px solid #282529;
-    border-top: 3px solid #66bfe9;
+    border-top: 3px solid #b237d8;
     align-self: center;
     display: flex;
     margin: auto;
-    
 }
-.circle2 .fluid-img{
+
+.circle2 .fluid-img {
     width: 100%;
     max-width: 160px;
     height: auto;
@@ -135,16 +149,20 @@ ul li a:hover {
     align-self: center;
     margin: auto;
 }
-#song-name{
-    color: #15253a;
+
+#song-name {
+    color: var(--five-color);
     font-weight: 400;
 }
+
 .circle.animate {
     animation: anticlock 6s infinite linear;
 }
+
 .circle2.animate {
     animation: clockwise 6s infinite linear;
 }
+
 .media-btn {
     width: 100%;
     max-width: 50px;
@@ -153,20 +171,25 @@ ul li a:hover {
     cursor: pointer;
     margin: 1rem;
 }
+
 @keyframes anticlock {
     from {
         transform: rotate(360deg);
-    } to {
+    }
+    to {
         transform: rotate(0deg);
     }
 }
+
 @keyframes clockwise {
     from {
         transform: rotate(0deg);
-    } to {
+    }
+    to {
         transform: rotate(360deg);
     }
 }
+
 @media (max-width: 900px) {
     #home .container {
         display: flex;
@@ -184,22 +207,26 @@ ul li a:hover {
         width: 90%;
     }
 }
+
 .card-body {
     width: 100%;
     max-width: 550px;
     min-height: 100vh;
-    background-color: #c7d8fc8c;
+    background-color: var(--three-color);
     margin: 1rem auto;
     border-radius: 8px;
 }
-.card-body nav{
+
+.card-body nav {
     margin: 0;
     padding-top: 2rem;
     text-align: center;
 }
-.card-body .about{
+
+.card-body .about {
     padding: 1rem;
 }
+
 .about .center {
     text-align: center;
 }
